{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 204,
  "lineage": "74031cd6-b207-d3e7-80e9-96e1588679ae",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnetid_private_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465242977050:subnet/subnet-0aa0f9bb840a1caa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.1.0/24",
            "default_for_az": false,
            "id": "subnet-0aa0f9bb840a1caa0",
            "map_public_ip_on_launch": false,
            "owner_id": "465242977050",
            "state": "available",
            "tags": {
              "Name": "sub-private01",
              "network": "private"
            },
            "vpc_id": "vpc-0c2d8f12853a8257c"
          },
          "depends_on": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnetid_private_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465242977050:subnet/subnet-09ce5ba0c6bc6dea2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.2.0/24",
            "default_for_az": false,
            "id": "subnet-09ce5ba0c6bc6dea2",
            "map_public_ip_on_launch": false,
            "owner_id": "465242977050",
            "state": "available",
            "tags": {
              "Name": "sub-private02",
              "network": "private"
            },
            "vpc_id": "vpc-0c2d8f12853a8257c"
          },
          "depends_on": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465242977050:security-group/sg-01255baf4f68519e7",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01255baf4f68519e7",
            "ingress": [],
            "name": "terraform-eks-demo-cluster",
            "name_prefix": null,
            "owner_id": "465242977050",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2d8f12853a8257c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:465242977050:security-group/sg-09dfb085ca5e02e72",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09dfb085ca5e02e72",
            "ingress": [],
            "name": "terraform-sg-eks-demo-node",
            "name_prefix": null,
            "owner_id": "465242977050",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2d8f12853a8257c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-node-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2383073818",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01255baf4f68519e7",
            "self": false,
            "source_security_group_id": "sg-09dfb085ca5e02e72",
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.demo-cluster",
            "aws_security_group.demo-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "193.57.249.2/32",
              "10.1.1.197/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3699494388",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01255baf4f68519e7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.demo-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-node-ingress-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-260423625",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09dfb085ca5e02e72",
            "self": false,
            "source_security_group_id": "sg-01255baf4f68519e7",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.demo-cluster",
            "aws_security_group.demo-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-node-ingress-self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-287294225",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09dfb085ca5e02e72",
            "self": false,
            "source_security_group_id": "sg-09dfb085ca5e02e72",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.demo-node"
          ]
        }
      ]
    }
  ]
}